@@ -1,3 +1,7 @@
+2005-07-11  Dan Winship  <danw@novell.com>
+
+	* libstetic/wrapper/objects.xml: add some missing properties
+
 2005-07-08  Dan Winship  <danw@novell.com>
 
 	* libstetic/wrapper/Widget.cs (InsensitiveManager): track
